--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,1 +1,8 @@
 port: "8000"
+
+db:
+    username: "postgres"
+    host: "localhost"
+    port: "54853"
+    dbname: "postgres"
+    sslmode: "disable"
